# labday2017-RobotPrimer

./: README.md  package.xml
launch/: start_speech_chat.launch
ros_aiml/: package.xml
ros_aiml/launch/: start_chat.launch  start_tts_chat.launch
ros_aiml/scripts/: aiml_server.py  aiml_speech_recog_client.py
scripts/: aiml_client.py  aiml_tts_client.py
test/: load_multiple_aiml.py
