<?xml version="1.0"?>
<package>
  <name>ros_aiml</name>
  <version>0.0.1</version>
  <description>The ros_aiml package</description>

  <maintainer email="gianluigi.bardelloni@kpn.com">Gianluigi Bardelloni</maintainer>


  <license>GNU General Public License v3.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sound_play</run_depend>


</package>
